# NormalEstimation

./: CMakeLists.txt  main.cpp  normalEstimation.cpp  normalEstimation.h  timer.cpp  timer.h
dataset/: boat.ply
